2010-06-13  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR bootstrap/44512
	* genenums.c (main): Output include of insn-constants.h
	* Makefile.in (insn-enums.o): Depend on insn-constants.h.

2010-06-25  Changpeng Fang  <changpeng.fang@amd.com>

	* common.opt (fprefetch-loop-arrays): Re-define
	-fprefetch-loop-arrays as a tri-state option with the initial
	value of -1.
	* tree-ssa-loop.c (gate_tree_ssa_loop_prefetch): Invoke prefetch
	pass only when flag_prefetch_loop_arrays > 0.
	* toplev.c (process_options): Note that, with tri-states,
	flag_prefetch_loop_arrays>0 means prefetching is enabled.
	* config/i386/i386.c (override_options): Enable prefetching at -O3
	for a set of CPUs that sw prefetching is helpful.
	(software_prefetching_beneficial_p): New.  Return TRUE if software
	prefetching is beneficial for the given CPU.

2010-06-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/44326
	* implicit-zee.c (find_removable_zero_extends): Replace
	INSN_P with NONDEBUG_INSN_P.

2010-06-25  Martin Jambor  <mjambor@suse.cz>

	* ipa-prop.h (struct ipa_param_descriptor): Removed the modified flag.
	(struct ipa_node_params): Removed the modification_analysis_done flag.
	(ipa_is_param_modified): Removed.
	(ipa_analyze_node): Declare.
	(ipa_compute_jump_functions): Remove declaration.
	(ipa_count_arguments): Likewise.
	(ipa_detect_param_modifications): Likewise.
	(ipa_analyze_params_uses): Likewise.
	* ipa-prop.c (struct param_analysis_info): New type.
	(visit_store_addr_for_mod_analysis): Removed.
	(visit_load_for_mod_analysis): Renamed to visit_ref_for_mod_analysis,
	moved down in the file.
	(ipa_detect_param_modifications): Merged into ipa_analyze_params_uses.
	(ipa_count_arguments): Made static.
	(mark_modified): New function.
	(is_parm_modified_before_call): New function.
	(compute_pass_through_member_ptrs): New parameter parms_info, call
	is_parm_modified_before_call instead of ipa_is_param_modified.