@@ -1,3 +1,9 @@
+2010-06-23  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	PR bootstrap/44637
+	* config/rs6000/rs6000.c (rs6000_xcoff_strip_dollar): Use const char *
+	variable for const char * strchr result.
+
 2010-06-13  Joern Rennecke  <joern.rennecke@embecosm.com>
 
 	PR bootstrap/44512
